--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
           "type": "boolean",
           "default": false,
           "markdownDescription": "デバッグモード。有効にすると詳細なログが出力されます。"
+        },
+        "lineLimitBlocker.maxLinesOverrides": {
+          "type": "object",
+          "default": {},
+          "markdownDescription": "ファイル名パターンごとにmaxLinesをオーバーライドします（例: { \"**/*.md\": 5000, \"**/*.log\": 10000 }）。パターンはminimatch形式で指定します。"
         }
       }
     }
