--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "LineLimitBlocker — 行数上限でブロック",
   "description": "指定行数を超えるファイルを自動で閉じるVSCode拡張機能（デフォルト: 1000行）",
   "version": "0.0.1",
-  "publisher": "your-name-or-org",
+  "publisher": "shotaiuchi",
   "icon": "icon.png",
   "engines": {
     "vscode": "^1.85.0"
